Fixed grid spacing

--- a/src/style/libraryCourse.scss
+++ b/src/style/libraryCourse.scss
@@ -2,12 +2,14 @@
 
 .library-course {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 1fr);
-    grid-template-rows: 80px 1fr;
+    grid-template-columns: 1fr 45px 58px;
+    grid-template-rows: 32px [line-s] 20px [line-e] 1fr;
+
+    align-items: center;
 
     &__line {
         grid-column: 1/-1;
-        grid-row: 1/2;
+        grid-row: 2/3;
     }
 
     &__title-check {
@@ -19,10 +21,12 @@
     &__action {
         grid-row: 1/2;
         grid-column: 3/4;
+
+        justify-self: center;
     }
 
     &__description {
-        grid-row: 2/3;
+        grid-row: 3/4;
         grid-column: 1/-1;
     }
 
@@ -42,7 +46,9 @@
 }
 
 .library-course {
-    padding: 25px;
+    padding-left: 25px;
+    padding-top: 12px;
+    padding-bottom: 12px;
 
     &:hover {
         @include solid-course();
@@ -59,14 +65,18 @@
         border-bottom: 1px solid #f2f2f2;
         margin-top: 19px;
         margin-bottom: 24px;
+        padding-top: 19px;
     }
 
     &__icon {
         color: $color-blue;
+        padding-left: 16px;
+        font-size: 24px;
     }
 
     &__description {
         label {
+            padding-top: 24px;
             color: $color-blue;
             font-family: $font-alegreya;
             font-size: 16px;
